--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body class="bg-white text-gray-900 font-['Inter'] overflow-hidden">
-    <div class="dot-background"></div>
+    <div id="snowfall" class="fixed inset-0 pointer-events-none z-50"></div>
+<!-- Top Ornament -->
+<div class="absolute top-8 left-1/2 -translate-x-1/2 flex items-center w-3/4">
+    <div class="h-[1px] flex-1 bg-gradient-to-r from-transparent via-black to-transparent"></div>
+    <div class="mx-2 rotate-45 bg-black w-3 h-3"></div>
+    <div class="mx-1 rotate-45 bg-black w-2 h-2"></div>
+    <div class="mx-2 rotate-45 bg-black w-3 h-3"></div>
+    <div class="h-[1px] flex-1 bg-gradient-to-r from-transparent via-black to-transparent"></div>
+</div>
+
     <main class="min-h-screen flex flex-col items-center justify-center p-8 relative z-10">
         <!-- Logo Section -->
         <section class="logo-section mb-12 opacity-0 animate-fade-in">
-            <img src="img/ten-point-hare-logo-1.png" 
-                 alt="Ten Point Hare Logo" 
-                 class="w-64 h-64 md:w-80 md:h-80 object-contain mx-auto mb-8">
+            <img src="img/ten-point-hare-logo.png"
+                 alt="Ten Point Hare Logo"
+                 class="w-64 h-64 md:w-80 md:h-80 object-contain mx-auto">
         </section>
 
         <!-- Company Name -->
@@ -34,18 +43,24 @@
                 Creating beautiful,<br>functional websites
             </p>
         </section>
-
         <!-- CTA Section -->
         <section class="cta opacity-0 animate-fade-in-delay-3">
             <button class="contact-btn px-8 py-3 border border-gray-300 text-gray-700 font-light tracking-wider hover:bg-gray-900 hover:text-white transition-all duration-500 ease-in-out transform hover:scale-105">
                 GET IN TOUCH
             </button>
         </section>
-
+        <!-- Bottom Ornament -->
+        <div class="absolute bottom-14 left-1/2 -translate-x-1/2 flex items-center w-3/4">
+            <div class="h-[1px] flex-1 bg-gradient-to-r from-transparent via-black to-transparent"></div>
+            <div class="mx-2 rotate-45 bg-black w-3 h-3"></div>
+            <div class="mx-1 rotate-45 bg-black w-2 h-2"></div>
+            <div class="mx-2 rotate-45 bg-black w-3 h-3"></div>
+            <div class="h-[1px] flex-1 bg-gradient-to-r from-transparent via-black to-transparent"></div>
+        </div>
         <!-- Minimal Footer -->
-        <footer class="absolute bottom-8 text-center opacity-0 animate-fade-in-delay-4">
+        <footer class="absolute bottom-4 text-center opacity-0 animate-fade-in-delay-4">
             <p class="text-sm text-gray-400 tracking-wider">
-                2025 TEN POINT HARE
+                &copy;2025 TEN POINT HARE
             </p>
         </footer>
     </main>
