added snowfall and running jackalope, still working on final logo spacing issue

--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
             <img src="img/ten-point-hare-logo.png"
                  alt="Ten Point Hare Logo"
                  class="w-64 h-64 md:w-80 md:h-80 object-contain mx-auto">
+            <!-- GIF Section -->
+            <div class="jackalope-container">
+                <img src="/jackalope-run/jackalope.png" class="jackalope-png">
+                <video class="jackalope-video" muted loop preload="auto">
+                    <source src="/jackalope-run/jackalope-run-loop.mp4" type="video/mp4">
+                </video>
+            </div>
         </section>
+
+
+
 
         <!-- Company Name -->
         <section class="company-name mb-8 opacity-0 animate-fade-in-delay-1">
