--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <main class="min-h-screen flex flex-col items-center justify-center p-8 relative z-10">
         <!-- Logo Section -->
         <section class="logo-section mb-12 opacity-0 animate-fade-in">
-            <img src="img/ten-point-hare-logo.png"
-                 alt="Ten Point Hare Logo"
-                 class="w-64 h-64 md:w-80 md:h-80 object-contain mx-auto">
+            <!-- Uncomment the following line to use the logo image -->
+<!--            <img src="img/ten-point-hare-logo.png"-->
+<!--                 alt="Ten Point Hare Logo"-->
+<!--                 class="w-64 h-64 md:w-80 md:h-80 object-contain mx-auto">-->
             <!-- GIF Section -->
             <div class="jackalope-container">
                 <img src="/jackalope-run/jackalope.png" class="jackalope-png">
@@ -36,9 +37,6 @@
                 </video>
             </div>
         </section>
-
-
-
 
         <!-- Company Name -->
         <section class="company-name mb-8 opacity-0 animate-fade-in-delay-1">
